# rzv_object_detection

./: .gitattributes  CMakeLists.txt  README.md  package.xml
config/foxglove/: objects_detection.json
config/models/: models_config.yaml
config/models/gold_yolo_hand/: addr_map.txt  deploy.json  deploy.params
config/models/gold_yolo_hand/preprocess/: addr_map.txt  drp_param_info.txt
config/models/yolov8n_rps/: addr_map.txt  deploy.json  mera.plan
config/models/yolov8n_rps/preprocess/: addr_map.txt  drp_config.mem  drp_param_info.txt
config/models/yolov8n_rps/sub_0000__CPU_DRP_TVM/: deploy.json
config/models/yolox_hand/: addr_map.txt  deploy.json  deploy.params  mera.plan
config/models/yolox_hand/preprocess/: addr_map.txt  drp_config.mem  drp_param_info.txt
config/models/yolox_hand/sub_0000__CPU_DRP_TVM/: deploy.json
config/models/yolox_pascal_voc/: addr_map.txt  deploy.json  mera.plan
config/models/yolox_pascal_voc/preprocess/: addr_map.txt  drp_config.mem
config/models/yolox_pascal_voc/sub_0000__CPU_DRP_TVM/: deploy.json
config/models/yolox_s_rps/: addr_map.txt  mera.plan
config/models/yolox_s_rps/preprocess/: drp_config.mem  drp_param_info.txt
config/models/yolox_s_rps/sub_0000__CPU_DRP_TVM/: deploy.json
include/rzv_object_detection/: gold_yolo_object_detection_node.hpp  object_detection_node.hpp  yolov8_object_detection_node.hpp  yolox_object_detection_node.hpp  yolox_rps_detection_node.hpp
launch/: camera_hand_detection.launch.py  camera_hand_detection_yolox.launch.py  camera_rps_hand_detection_yolov8.launch.py  camera_rps_hand_detection_yolox.launch.py  static_fpn_hand_detection.launch.py  static_hand_detection.launch.py  static_hand_detection_gold_yolo.launch.py  static_hand_detection_gold_yolox.launch.py  static_hand_detection_yolox.launch.py  static_object_detection.launch.py  static_object_detection_yolox.launch.py  static_rps_hand_detection_yolov8.launch.py  static_rps_hand_detection_yolox.launch.py  static_unified_hand_detection.launch.py
src/: gold_yolo_object_detection_node.cpp  object_detection_node.cpp  yolov8_object_detection_node.cpp  yolox_object_detection_node.cpp  yolox_rps_detection_node.cpp
