cmake_minimum_required(VERSION 3.8)
project(rzv_object_detection)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(rzv_model REQUIRED)

# create target
set(TARGET_OBJ_DET object_detection)
add_executable(${TARGET_OBJ_DET}
  src/object_detection_node.cpp
)

# include directories
target_include_directories(${TARGET_OBJ_DET} PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>
)
target_include_directories(${TARGET_OBJ_DET} PUBLIC
  $<BUILD_INTERFACE:/usr/include/renesas/opencv4>
)

# ROS2 dependencies
ament_target_dependencies(${TARGET_OBJ_DET}
  rclcpp
  sensor_msgs
  geometry_msgs
  rzv_model
)

install(
  TARGETS ${TARGET_OBJ_DET} EXPORT ${TARGET_OBJ_DET}
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  RUNTIME DESTINATION lib/${PROJECT_NAME}
)

install(
  DIRECTORY include/
  DESTINATION include/
)

# Install config files
install(
  DIRECTORY config
  DESTINATION share/${PROJECT_NAME}
)

# Install launch files
install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}
)

ament_export_include_directories(include)
ament_export_libraries(${TARGET_OBJ_DET})
ament_export_targets(${TARGET_OBJ_DET})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
