<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rzv_object_detection</name>
  <version>1.0.0</version>
  <description>Object detection package for Renesas RZ/V2H</description>
  <maintainer email="baoan.du.xj@renesas.com">Baoan Du</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rzv_model</depend>
  <depend>rzv_yolox</depend>
  <depend>rzv_yolov8</depend>
  <depend>rzv_gold_yolo</depend>
  <depend>rzv_model_utils_ros2</depend>

  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>image_publisher</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>foxglove_keypoint_publisher</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
